--- a/_posts/2017-04-12-agenda.markdown
+++ b/_posts/2017-04-12-agenda.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "agenda / schedule"
 date:   2017-04-12 17:06:26 +0200
-categories: jekyll update
+categories: organisation
 ---
 
 
@@ -15,14 +15,14 @@ categories: jekyll update
 
 * **Jeudi 11 mai <a href="https://www.unige.ch/presse/plans/uni-mail-uni-pignon/" target="_blank">@ Uni Mail </a>**
     * **12h15 - 17h45 :** <a href="http://www.unige.ch/rdvens" target="_blank" >Innover dans l'enseignement universitaire grâce aux ressources libres</a>
-    * **17h45 - 18h30 :** Lecture publique *"he Power of Open"* (en anglais)<br> par <a href="http://rufuspollock.com/about/" target="_blank">Rufus Pollock </a>,Fondateur et Président de Open Knowledge
+    * **17h45 - 18h30 :** Lecture publique *"The Power of Open"* (en anglais)<br> par <a href="http://rufuspollock.com/about/" target="_blank">Rufus Pollock</a>, Fondateur et Président de Open Knowledge
 
 
 <br>
 
-*  **Vendredi 12 et Samedi 13 mai <a href="{% post_url 2017-04-12-hackathonmap %}">@ dans toute la Cité</a>**
+*  **Vendredi 12 et Samedi 13 mai <a href="{{ site.baseurl }}{% post_url 2017-04-12-hackathonmap %}">@ dans toute la Cité</a>**
 
-    * les hackathons organisés se déroulent dans toute la ville: Hôpitaux Universitaires Genève, IdeaSquqre / CERN, Campus Biotech, Centre Universitaire Informatique, Campus Battelle, Carouge, Impact Hub, etc. <a href="{% post_url 2017-04-12-hackathonmap %}">[voir carte / see map]</a>
+    * les hackathons organisés se déroulent dans toute la ville: Hôpitaux Universitaires Genève, IdeaSquqre / CERN, Campus Biotech, Centre Universitaire Informatique, Campus Battelle, Carouge, Impact Hub, etc. <a href="{{ site.baseurl }}{% post_url 2017-04-12-hackathonmap %}">[voir carte / see map]</a>
 
 <br>
 
@@ -40,8 +40,13 @@ categories: jekyll update
 
         * **15h00 :** ouverture des portes à Campus Biotech - présentation de posters
 
-        * **16h00 à 16h20 :** The Power of Open par Rufus Pollock, Fondateur et Président de Open Knowledge (http://rufuspollock.com/about/)
+        * **16h00 à 16h20 :** The Power of Open par Rufus Pollock, Fondateur et Président de Open Knowledge (<a href="http://rufuspollock.com/about/">http://rufuspollock.com/about/</a>)
 
         * **16h30 à 17h30 :** présentations de projets (‘pitch’ de 3 minutes, 1-2 projets choisis par les organisateurs de chaque hackathon).
 
         * **17h30 :** cocktail, posters et networking
+
+        **S'inscrire pour l'événement final (14 mai 2017, 16h-19h <a href="https://www.unige.ch/presse/plans/cmu-2/" target="_blank">@ Campus Biotech </a>) :**
+
+
+        <a href="https://www.eventbrite.com/e/open-geneva-hackathons-tickets-33669345920" class="button style1" target="_blank"><img src="{{ site.baseurl }}/images/register_eventbrite_eng.png" alt="register" style="width:200px; align:center"/></a>
